--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Animations</string>
     <string name="without_animation">Without animation</string>
     <string name="with_animtaion">with animtaion</string>
+    <string name="with_or_without_animation">With or Without animation</string>
 </resources>
