--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="without_animation">Without animation</string>
     <string name="with_animtaion">with animtaion</string>
     <string name="with_or_without_animation">With or Without animation</string>
+    <string name="slide">Slide</string>
 </resources>
