--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="slide">Slide</string>
     <string name="explode">Explode</string>
     <string name="populate">Populate</string>
+    <string name="change_image_transform">Change image transform</string>
 </resources>
