Path curved motion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="explode">Explode</string>
     <string name="populate">Populate</string>
     <string name="change_image_transform">Change image transform</string>
+    <string name="path_curved_motion">Path (Curved) Motion</string>
 </resources>
