--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="change_image_transform">Change image transform</string>
     <string name="path_curved_motion">Path (Curved) Motion</string>
     <string name="activity_scene_transition">Activity scene transition</string>
+    <string name="transition_name">Transition name</string>
+    <string name="shuffle">Shuffle</string>
 </resources>
