Added a basic FabActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="transition_name">Transition name</string>
     <string name="shuffle">Shuffle</string>
     <string name="coordinator_layout">Coordinator Layout</string>
+    <string name="fab">FAB</string>
+    <string name="title_activity_fab">FabActivity</string>
 </resources>
