--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,5 @@
     <string name="title_activity_parallax">ParallaxActivity</string>
     <string name="parallax">Parallax</string>
     <string name="action_info">info</string>
+    <string name="constraint_layout">Constraint Layout</string>
 </resources>
