--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,4 +114,5 @@
     <string name="parallax">Parallax</string>
     <string name="action_info">info</string>
     <string name="constraint_layout">Constraint Layout</string>
+    <string name="swap_views">Swap views</string>
 </resources>
