--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,4 +132,5 @@
     <string name="multi_fab">Multi Fab</string>
     <string name="custom_views">Custom Views</string>
     <string name="poll_view">Poll View</string>
+    <string name="motion_layout">Motion Layout</string>
 </resources>
