Added a basic motion layout sample, update target, min and max sdk, updated a few dependencies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,4 +135,6 @@
     <string name="motion_layout">Motion Layout</string>
     <string name="material">Material</string>
     <string name="extended_fab">Extended Fab</string>
+    <string name="basic">Basic</string>
+    <string name="slide_up_for_the_animation">Slide Up for the animation</string>
 </resources>
