Added another basic motion layout example

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,4 +141,5 @@
     <string name="hello">Hello</string>
     <string name="sanket">Sanket</string>
     <string name="click">Click</string>
+    <string name="basic_2">Basic 2</string>
 </resources>
