Added viewpager motion layout example

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,4 +147,5 @@
     <string name="image_saturation">Image Saturation</string>
     <string name="coordinator_layout_2">Coordinator Layout 2</string>
     <string name="vetkoli">Vetkoli</string>
+    <string name="view_pager">View Pager</string>
 </resources>
