--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,4 +148,9 @@
     <string name="coordinator_layout_2">Coordinator Layout 2</string>
     <string name="vetkoli">Vetkoli</string>
     <string name="view_pager">View Pager</string>
+    <string name="fragment">Fragment</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="second">Second</string>
+    <string name="first">First</string>
 </resources>
