Added button for key trigger motion scene

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,4 +157,5 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notification</string>
+    <string name="key_trigger">Key Trigger</string>
 </resources>
